[project]
name = "compiladores-2026-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
# --- TUTORIAL ---
"build:tutorial" = "cd tutorial && java -jar ../antlr-4.13.2-complete.jar -Dlanguage=Python3 Tutorial.g4"
"start:tutorial" = "cd tutorial && python main.py"

# --- TRABALHO 1: URLs ---
"build:url" = "cd analisador_urls && java -jar ../antlr-4.13.2-complete.jar -Dlanguage=Python3 UrlLexer.g4"
"start:url" = "cd analisador_urls && python main.py"